# jayuljoohang

./: .gitignore  README.md  lanedetect.py  pyproject.toml  requirements.txt
arduino/vehicle_controller/: vehicle_controller.ino
config/: default.json
configs/: default.json  test_cam0.json
data/calibration/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: architecture.md  competition_notes.md  folder_roles.md
docs/checklists/: bringup.md
firmware/arduino/vehicle_controller/: vehicle_controller.ino
logs/: .gitkeep
scripts/: camera_check.py  drive.py  lanedetect.py  list_serial_ports.py  probe_cameras.py  run_baseline.py  test_serial.py
src/autocar/: __init__.py
src/autocar/camera/: __init__.py  camera_source.py
src/autocar/common/: config.py  types.py
src/autocar/control/: __init__.py  arduino_serial.py  protocol.py
src/autocar/decision/: lane_follower.py
src/autocar/recognition/: __init__.py  opencv_lane.py
src/skku_autocar/: __init__.py  cli.py  config.py  types.py
src/skku_autocar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/skku_autocar/control/: __init__.py  arduino_serial.py  protocol.py
src/skku_autocar/perception/: __init__.py  lane.py
src/skku_autocar/planning/: __init__.py  lane_follower.py
src/skku_autocar/sensors/: __init__.py  camera.py  lidar.py
tests/: test_config.py  test_decision.py  test_protocol.py
