[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skku-autocar"
version = "0.1.0"
description = "Mac-friendly autonomous vehicle project split into camera, recognition, decision, and control layers."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
